Add Users from devise

--- a/app/assets/stylesheets/script.css
+++ b/app/assets/stylesheets/script.css
@@ -40,6 +40,11 @@ body {
     -webkit-text-stroke-color: #007713;
 }
 
+.user-buttons {
+    display: flex;
+    gap: 10px;
+}
+
 .sidebar {
     background-color: #042F00;
     grid-column: 1;
