--- a/app/views/posts/_header.html.erb
+++ b/app/views/posts/_header.html.erb
@@ -1,5 +1,12 @@
 <div class="header">
     <a href="https://blog.randomflea.dev">Random Flea's<br>Blog</a>
     <%# <a href="blog-index.html">Index</a> %>
-    <a href="sign_on">Sign In/Out</a>
+    <div class="user-buttons">
+    <% if user_signed_in? %>
+        <%= link_to "Sign Out", destroy_user_session_path %>
+    <% else %>
+        <%= link_to "Sign In", new_user_session_path %>
+        <%= link_to "Sign Up", new_user_registration_path %>
+    <% end %>
+    </div>
 </div>
